--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack-dev-server --open --mode development",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "dotenv-webpack": "^8.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
+    "prettier": "^3.6.2",
     "webpack": "^5.100.2",
     "webpack-dev-server": "^5.2.2"
   },
