--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -8,25 +8,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           
       - name: Install server dependencies
         working-directory: ./server
-        run: npm install
-
-      - name: Run Prettier check on server
-        working-directory: ./server
-        run: npx prettier --check .
+        run: npm ci && npx prettier --check .
         
       - name: Install client dependencies
         working-directory: ./client
-        run: npm install
+        run: npm ci && npx prettier --check .
 
-      - name: Run Prettier check on client
-        working-directory: ./client
-        run: npx prettier --check .
