--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type":"module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "node --watch index.js",
     "format": "prettier --write ."
   },
   "keywords": [],
@@ -11,6 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
+    "mongodb": "^2.2.12",
+    "mongoose": "^8.16.4",
     "prettier": "^3.6.2"
   }
 }
