--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@reduxjs/toolkit": "^2.8.2",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
+    "redux-saga": "^1.3.0",
     "styled-system": "^5.1.5",
     "webpack-cli": "^6.0.1"
   }
