--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,12 @@
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "prettier": "^3.6.2",
+    "style-loader": "^4.0.0",
     "webpack": "^5.100.2",
     "webpack-dev-server": "^5.2.2"
   },
@@ -27,10 +29,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.10.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
     "redux-saga": "^1.3.0",
     "styled-system": "^5.1.5",
     "webpack-cli": "^6.0.1"
