--- a/client/package.json
+++ b/client/package.json
@@ -37,10 +37,12 @@
     "@emotion/styled": "^11.14.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.7.1",
     "react-toastify": "^11.0.5",
     "redux-saga": "^1.3.0",
     "styled-system": "^5.1.5",
