--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^2.2.12",
     "mongoose": "^8.16.4",
+    "nodemailer": "^7.0.5",
     "prettier": "^3.6.2"
   }
 }
