--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^2.2.12",
     "mongoose": "^8.16.4",
     "nodemailer": "^7.0.5",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "zod": "^4.0.14"
   }
 }
